[gd_scene load_steps=19 format=3 uid="uid://wtywps23r4pk"]

[ext_resource type="Texture2D" uid="uid://di6bu1jdu6ihs" path="res://assets/sprites/bombardier.png" id="1_3h142"]
[ext_resource type="Script" path="res://scripts/enemy_bombardier.gd" id="1_ot3qs"]
[ext_resource type="PackedScene" uid="uid://bed5g7cgxxc8m" path="res://scene/phase2/weapons/grenade_launcher.tscn" id="3_kfer1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wy40i"]
radius = 14.0
height = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wkelr"]
radius = 280.0

[sub_resource type="CircleShape2D" id="CircleShape2D_j2loa"]
radius = 1000.0

[sub_resource type="Animation" id="Animation_5qucw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1ygv8"]
resource_name = "attack"
length = 0.24
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [8, 9, 10]
}

[sub_resource type="Animation" id="Animation_q56l4"]
resource_name = "idle"
length = 0.64
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_k541p"]
resource_name = "run"
length = 0.66
step = 0.06
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.12, 0.18, 0.24, 0.3, 0.36, 0.42, 0.48, 0.54, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21]
}

[sub_resource type="Animation" id="Animation_svbm5"]
resource_name = "tackle"
length = 0.48
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [22, 23, 24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_gkoep"]
resource_name = "walk"
length = 1.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ua0br"]
_data = {
"RESET": SubResource("Animation_5qucw"),
"attack": SubResource("Animation_1ygv8"),
"idle": SubResource("Animation_q56l4"),
"run": SubResource("Animation_k541p"),
"tackle": SubResource("Animation_svbm5"),
"walk": SubResource("Animation_gkoep")
}

[sub_resource type="Gradient" id="Gradient_2h2nb"]
offsets = PackedFloat32Array(0, 0.746753)
colors = PackedColorArray(0.759551, 0.86733, 0.966086, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_p8rip"]
gradient = SubResource("Gradient_2h2nb")
fill = 1
fill_from = Vector2(0.509174, 0.513761)

[sub_resource type="CircleShape2D" id="CircleShape2D_rpaox"]
radius = 160.0

[sub_resource type="CircleShape2D" id="CircleShape2D_scse4"]
radius = 280.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c3lri"]
radius = 200.0

[node name="bombardier" type="CharacterBody2D" groups=["Enemy"]]
position = Vector2(0, -25)
script = ExtResource("1_ot3qs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10, 0)
shape = SubResource("CapsuleShape2D_wy40i")

[node name="TackleArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TackleArea"]
shape = SubResource("CircleShape2D_wkelr")

[node name="ShootingArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootingArea"]
shape = SubResource("CircleShape2D_j2loa")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3h142")
hframes = 28

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ua0br")
}

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(2, -4)
scale = Vector2(2, 2)
range_layer_min = -2
texture = SubResource("GradientTexture2D_p8rip")
metadata/_edit_lock_ = true

[node name="RayCastWall" type="RayCast2D" parent="."]
position = Vector2(3, 12)
target_position = Vector2(-27, -1)

[node name="WeaponPoint" type="Marker2D" parent="."]
position = Vector2(-14, 9)

[node name="grenade_launcher" parent="WeaponPoint" instance=ExtResource("3_kfer1")]

[node name="CommitTackleArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CommitTackleArea"]
shape = SubResource("CircleShape2D_rpaox")

[node name="LeaveCommitTackle" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeaveCommitTackle"]
shape = SubResource("CircleShape2D_scse4")

[node name="ExplosionRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionRadius"]
shape = SubResource("CircleShape2D_c3lri")

[node name="RayCastFloor" type="RayCast2D" parent="."]
position = Vector2(-3, 19)
target_position = Vector2(0, 95)

[connection signal="body_entered" from="TackleArea" to="." method="_on_tackle_area_body_entered"]
[connection signal="body_exited" from="TackleArea" to="." method="_on_tackle_area_body_exited"]
[connection signal="body_entered" from="ShootingArea" to="." method="_on_shooting_area_body_entered"]
[connection signal="body_exited" from="ShootingArea" to="." method="_on_shooting_area_body_exited"]
[connection signal="body_entered" from="CommitTackleArea" to="." method="_on_commit_tackle_area_body_entered"]
[connection signal="body_exited" from="CommitTackleArea" to="." method="_on_commit_tackle_area_body_exited"]
[connection signal="body_exited" from="LeaveCommitTackle" to="." method="_on_leave_commit_tackle_body_exited"]
